<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_padding"
    android:paddingStart="@dimen/activity_horizontal_padding"
    android:paddingEnd="@dimen/activity_horizontal_padding"
    tools:context="com.zeevox.dogscreen.demo.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_welcome"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_padding"
            android:paddingEnd="@dimen/activity_horizontal_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:paddingBottom="@dimen/activity_vertical_padding">


            <TextView
                android:id="@+id/welcome_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_welcome_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome_title"
                android:paddingTop="8dp"
                android:text="@string/main_welcome_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            <Button
                android:textSize="16.0sp"
                android:textColor="@color/colorAccent"
                android:id="@+id/welcome_action"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_welcome_action"
                android:layout_below="@id/welcome_text"
                android:paddingTop="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.Space
        android:id="@+id/main_space"
        android:layout_below="@id/card_view_welcome"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_padding" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_info"
        android:layout_below="@id/main_space"
        android:paddingTop="@dimen/activity_vertical_padding"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_padding"
            android:paddingEnd="@dimen/activity_horizontal_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:orientation="vertical">

            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_info_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_build"
                android:text="@string/main_info_text_build"/>

            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_version"
                android:text="@string/main_info_text_version"/>

            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_flavor"
                android:text="@string/main_info_text_flavor"/>

            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_debug"
                android:text="@string/main_info_text_debug"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
