<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/dogscreen_root"
                android:background="@color/dogscreen_background"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                tools:ignore="Overdraw">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="252.0dip"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="200.0dip"
            android:layout_height="200.0dip"
            android:src="@drawable/playful_dog"
            android:scaleType="fitCenter"
            android:contentDescription="@string/playful_dog_illustration"/>
        <TextView
            android:textSize="24.0sp"
            android:textColor="@color/registration_element_fg"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="16.0dip"
            android:text="@string/dogscreen_warning" />
        <TextView
            android:textSize="16.0sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:layout_marginBottom="56.0dip"
            android:text="@string/dogscreen_desc" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/dogscreen_confirm_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/activity_vertical_padding"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginRight="@dimen/activity_padding"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/check"
        app:backgroundTint="@color/registration_element_fg"/>


</RelativeLayout>